# ChangeLog for dev-python/see
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Dec 2010; James Rowe <jnrowe@gmail.com> see-1.0.1.ebuild:
  Keyworded amd64.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

*see-1.0.1 (05 Nov 2010)

  05 Nov 2010; James Rowe <jnrowe@gmail.com> +see-1.0.1.ebuild:
  Version bump [213].

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  09 Sep 2010; James Rowe <jnrowe@gmail.com> see-1.0.0.ebuild:
  Keyworded x86.

  09 Sep 2010; James Rowe <jnrowe@gmail.com> see-1.0.0.ebuild:
  Keyworded amd64.

  10 Aug 2010; James Rowe <jnrowe@gmail.com> see-1.0.0.ebuild:
  Keyworded ~x86.

*see-1.0.0 (10 Aug 2010)

  10 Aug 2010; James Rowe <jnrowe@gmail.com> +see-1.0.0.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
