@@ -1,22 +1,0 @@
->=app-admin/eselect-python-20091230 dev-lang/python
->=app-admin/eselect-python-20091230 dev-lang/python
-0
-mirror://pypi/s/see/see-1.0.0.tar.bz2
-
-http://inky.github.com/see/
-GPL-3
-A human-readable alternative to Python's dir()
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
-
-
-
-2
-
-compile install postinst postrm prepare
-
-
-
-
-
