@@ -1,4 +1,3 @@
-REM 2010-12-05 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/see-1.0.1 %a
 REM 2010-12-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/benchmarker-2.0.0 %a
 REM 2010-12-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-vcs/gitflow-0.4-r1 %a
 REM 2010-12-08 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/rad-0.1.2 %a
