@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Dec 2010; James Rowe <jnrowe@gmail.com> -see-1.0.0.ebuild,
+  see-1.0.1.ebuild:
+  Keyworded x86.
+
   10 Dec 2010; James Rowe <jnrowe@gmail.com> see-1.0.1.ebuild:
   Keyworded amd64.
 
